# karuma

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile.cross  README.md
.cargo/: config.toml
console/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
console/mock/: config.ts  index.ts  messages.ts
console/src/: App.vue
console/src/api/: index.ts
console/src/components/: MessageCard.vue  NavBar.vue
console/src/router/: index.ts
console/src/types/: config.ts  index.ts
console/src/views/: Login.vue  Pictures.vue  Settings.vue
console/src/views/messages/: Archives.vue  List.vue
src/: catapi.rs  constants.rs  main.rs  message.rs  server.rs  ui.rs
src/api/: calendar.rs
src/server/: console.rs  picture.rs  snapshot.rs
src/utils/: cron.rs
ui/: app-window.slint  state.slint
ui/header/: HeaderDatetime.slint
ui/messages/: MessageBubble.slint  MessageList.slint  MessageNotFound.slint
ui/picture/: PictureView.slint
ui/schedule/: ScheduleList.slint  ScheduleRow.slint
ui/types/: datetime.slint
ui/utils/: DateText.slint  DatetimeSpan.slint  Line.slint  TimeText.slint
